# bugg-firebase-app

./: .firebaserc  404.html  README.md  firebase.json  firestore.rules  index.html  search.html  storage.rules
.github/workflows/: deploy-mkdocs.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
analyses/anomaly-detection/: Dockerfile  push-build.sh
analyses/anomaly-train-gmm/: Dockerfile  push-build.sh
analyses/birdnet-lite/: Dockerfile  push-build.sh
analyses/birdnetlib/: Dockerfile  README.md
analyses/birdnetlib/app/: pyproject.toml
analyses/birdnetlib/app/bugg_analyses_birdnetlib/: main.py
analyses/clippy/: Dockerfile  README.md  push-build.sh
analyses/hello-world/: Dockerfile  deploy.sh
analyses/vggish/: Dockerfile  (+1 more)
analysis/: index.html
app/: App.tsx  app.json  package.json  types.d.ts  types.ts
bugg-cli/: setup.py
bugg_xyz/: classnames.ts  package.json  tailwind.config.js  types.ts
docs/: analysis.md  firestore.md  frontend.md  index.md  mkdocs.yml  runfunctions.md  storage.md
firestore/: index.html
frontend/: index.html
functions/: package.json
runfunctions/: index.html
scripts/: addDownloadTokenToAllRecords.ts  cleanDuplicates.ts  downloadFeatures.ts  exportAudioRecordsForProject.ts  exportDetectionsForProject.ts  generateAnalyses.ts  generateDummyData.ts  generateRecorders.ts  package.json  reprocessBirdnetDetetions.ts  submitAllAudioForProcessing.ts  submitAllDetectionsForClipping.ts  types.ts  uploadAudio.ts
search/: search_index.json
storage/: index.html
storage-demo/: index.js  package.json
(+140 files in other folders)
